<resources>
    <string name="app_name">v5mobile</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_target">Load Target</string>
    <string name="button_action">Send Action</string>
    <string name="button_state">Send State</string>
    <string name="button_login">ECID</string>
    <string name="state_message">State</string>
    <string name="action_message">Action</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="msg_ecid_fmt">ECID: %s</string>
    <string name="fcm_token">FCM Token: %s</string>
</resources>
